# auto-gait

./: CMakeLists.txt  main.cpp  opt.cpp  test.cpp
